--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -13,9 +13,11 @@
 
 
     .playlist-details-main {
-        margin-left: 20px;
         margin-top: 75px;
-
+        
+        @media(min-width:770px) {
+            margin-left: 20px;
+        }
         @media(min-width:1020px) {
             margin-top: 0;
         }
@@ -24,21 +26,63 @@
             gap: 20px;
             margin-bottom: 20px;
             position: relative;
+            justify-content: space-between;
 
-
-            .play-btn {
-                @include green-play-btn;
-                z-index: 30;
+            @media(min-width:770px) {
+                justify-content: inherit;
             }
 
-            .menu-btn {
-                @include cleared-btn;
-                z-index: 30;
+            .start-btns {
+                display: flex;
+                gap: 15px;
+                align-items: flex-end;
 
-                span {
-                    font-size: 12px;
+                .play-btn {
+                    @include green-play-btn;
+                    z-index: 30;
+                }
+
+                .shuffle-btn {
+                    @include cleared-btn;
+                    font-size: 25px;
+                    position: relative;
+
+                    &.shuffled {
+                        color: #1db954;
+
+
+                        &::after {
+                            content: '.';
+                            font-size: 51px;
+                            position: absolute;
+                            top: -22px;
+                            left: 13px;
+                        }
+                    }
                 }
             }
+
+            .end-btns {
+                display: flex;
+                gap: 15px;
+
+                .menu-btn {
+                    @include cleared-btn;
+                    z-index: 30;
+                    transform: rotate(90deg);
+                    margin-inline-end: 5px;
+
+                    span {
+                        font-size: 12px;
+                    }
+
+                    @media(min-width:770px) {
+                        margin-inline-end: inherit;
+                        transform: rotate(0deg);
+                    }
+                }
+            }
+
         }
 
         .playlist-details-main-content {
