--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -16,10 +16,10 @@
 
     .playlist-details-main {
         margin-top: 75px;
+        margin-left: 20px;
 
-        @media(min-width:770px) {
-            margin-left: 20px;
-        }
+        // @media(min-width:770px) {
+        // }
 
         @media(min-width:1020px) {
             margin-top: 0;
