adding some designing

--- a/src/assets/styles/cmps/_app-navbar.scss
+++ b/src/assets/styles/cmps/_app-navbar.scss
@@ -1,7 +1,7 @@
 .app-navbar {
     grid-area: nav-bar;
     min-width: 200px;
-    background-color: rgba(8, 8, 8, 0.728);
+    background-color: rgb(8 8 8 / 89%);
     position: fixed;
     bottom: 0;
     left: 0;
