--- a/src/assets/styles/cmps/_action-msg.scss
+++ b/src/assets/styles/cmps/_action-msg.scss
@@ -3,7 +3,7 @@
     bottom: 17%;
     left: 41%;
     padding: 5px;
-    background-color: black;
+    background-color: #0d72ea;
     border-radius: 4px;
 
     h3 {
