--- a/src/assets/styles/pages/_liked-songs.scss
+++ b/src/assets/styles/pages/_liked-songs.scss
@@ -5,22 +5,27 @@
         margin-left: -7px;
     }
 
-    .img-container {
+    &.img-container {
 
         .liked-songs-img {
-            width: 150px;
-            height: 150px;
             display: flex;
             background: linear-gradient(135deg, #450af5, #c4efd9);
             border-radius: 3px;
             font-size: 65px;
             position: relative;
+            height: 180px;
+            width: 180px;
+           
 
             span {
                 position: absolute;
-                top: 42px;
-                left: 43px;
+                top: 58px;
+                left: 58px;
 
+                @media(min-width:1020px) {
+                    top: 42px;
+                    left: 43px;
+                }
             }
         }
 
@@ -30,8 +35,8 @@
             min-width: 232px;
 
             .liked-songs-img {
-                width: 228px;
-                height: 228px;
+                width: 230px;
+                height: 230px;
                 font-size: 90px;
 
                 span {
