--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -209,11 +209,14 @@
 
 
                     &::after {
-                        content: '.';
-                        font-size: 51px;
-                        position: absolute;
-                        top: -22px;
-                        left: 13px;
+                        @media(min-width: 770px) {
+                            content: '.';
+                            font-size: 51px;
+                            position: absolute;
+                            top: -22px;
+                            left: 13px;
+                        }
+
                     }
                 }
 
@@ -262,6 +265,7 @@
             top: 4px;
         }
 
+        // needs to make the volume smaller 
         .volume-btn {
             @include cleared-btn;
             width: 32px;
@@ -269,21 +273,18 @@
             font-size: 20px;
             line-height: 12px;
         }
+
+        span {
+            span:last-child {
+                width: 12px;
+                height: 12px;
+            }
+        }
     }
 
     .css-eg0mwd-MuiSlider-thumb::after {
         width: 22px;
         height: 22px;
-    }
-
-    .css-ok908x-MuiSlider-root .MuiSlider-thumb {
-        width: 12px;
-        height: 12px;
-
-        &.Mui-active {
-            width: 12px;
-            height: 12px;
-        }
     }
 
     .css-ok908x-MuiSlider-root .MuiSlider-thumb:hover,
